--- a/PersonasLibrary/PersonasLibrary.csproj
+++ b/PersonasLibrary/PersonasLibrary.csproj
@@ -41,7 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Administrativo.cs" />
+    <Compile Include="Alumno.cs" />
+    <Compile Include="Directivo.cs" />
     <Compile Include="Persona.cs" />
+    <Compile Include="Profesor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
